--- a/tab1.html
+++ b/tab1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>选项卡（使用CSS3中新增的:checked选择器）</title>
     <style>
-        /*区别于传统的使用JS或者JQuery制作的选项卡，这个案例是利用CSS3中新增的:checked选择器，
+        /*区别于传统的使用JS或者JQuery制作的选项卡，这个案例是利用CSS3中新增的:checked选择器结合radio单选标签，
         方便地使选中的内容从隐藏到显示，其实和JS操作的原理是一样的，只不过使用的选择器不同，
         一个是用JS来选，一个是用CSS来选。*/
 
